WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280496
[WTF] HexNumberBuffer::span() should not ignore std::array size
https://bugs.webkit.org/show_bug.cgi?id=280496
Summary
[WTF] HexNumberBuffer::span() should not ignore std::array size
David Kilzer (:ddkilzer)
Reported
2024-09-26 21:33:42 PDT
[WTF] HexNumberBuffer::span() should not ignore std::array size. Currently the length of the std::array (buffer) is ignored when creating a std::span because a pointer to the nth-from-last element of the std::array is used to create a std::span instead of using the std::array itself.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-26 21:34:12 PDT
<
rdar://problem/136802343
>
David Kilzer (:ddkilzer)
Comment 2
2024-09-27 09:58:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34364
EWS
Comment 3
2024-09-27 16:05:50 PDT
Committed
284396@main
(8b5404a28cd2): <
https://commits.webkit.org/284396@main
> Reviewed commits have been landed. Closing PR #34364 and removing active labels.
EWS
Comment 4
2024-09-30 09:30:02 PDT
Committed
283286.151@safari-7620-branch
(873bbcf055cd): <
https://commits.webkit.org/283286.151@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1930 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug