Source/WTF/wtf/HexNumber.h
@@ -52,8 +52,7 @@ struct HexNumberBuffer {
     std::array<LChar, 16> buffer;
     unsigned length;
 
-    const LChar* characters() const { return &*(buffer.end() - length); }
-    std::span<const LChar> span() const { return { characters(), length }; }
+    std::span<const LChar> span() const LIFETIME_BOUND { return std::span { buffer }.last(length); }
 };
 
 template<typename NumberType> HexNumberBuffer hex(NumberType number, unsigned minimumDigits = 0, HexConversionMode mode = Uppercase)
@@ -83,8 +82,6 @@ public:
     template<typename CharacterType> void writeTo(CharacterType* destination) const { StringImpl::copyCharacters(destination, m_buffer.span()); }
 
 private:
-    const LChar* characters() const { return m_buffer.characters(); }
-
     const HexNumberBuffer& m_buffer;
 };
 
